<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.coinconventer.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/price_per_1_kk" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <EditText
            android:id="@+id/editTextPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:text="@string/_editTextPrice"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewPrice1"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />

        <TextView
            android:id="@+id/textViewPrice2"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />

    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/coins_to_rubles" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <EditText
            android:id="@+id/editTextCoinsToRubles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:text="@string/_editTextCoinsToRubles"
            android:textSize="18sp"
            android:gravity="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewCoinsToRubles"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:text="" />

        <TextView
            android:id="@+id/textViewCoinsToRublesValue"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/rubles" />
    </LinearLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/rubles_to_coins" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <EditText
            android:id="@+id/editTextRublesToCoins"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:text="@string/_editTextRublesToCoins"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewRublesToCoins"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:text="" />

        <TextView
            android:id="@+id/textViewRublesToCoinsValue"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/vk_coins" />

    </LinearLayout>

    <TextView
        android:id="@+id/resultView"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:textSize="20sp"
        android:textColor="#000000"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/buttonConvert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2E82C7"
        android:padding="10dp"
        android:textColor="#EEE4E4"
        android:text="@string/buttonConvert"
        android:textSize="15sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textViewVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewVersion"
        android:textAlignment="viewEnd"
        android:textSize="10sp"
        tools:ignore="SmallSp" />

</LinearLayout>
